WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118236
:read-write pseudo-class should not be applied on <input type="text" disabled>
https://bugs.webkit.org/show_bug.cgi?id=118236
Summary
:read-write pseudo-class should not be applied on <input type="text" disabled>
Makoto Kato
Reported
2013-07-01 05:14:27 PDT
http://www.whatwg.org/specs/web-apps/current-work/multipage/selectors.html#selector-read-write
The :read-write pseudo-class must match any element falling into one of the following categories, which for the purposes of Selectors are thus considered user-alterable: [SELECTORS] input elements to which the readonly attribute applies, and that are mutable (i.e. that do not have the readonly attribute specified and that are not disabled) So :read-write pseudo-class should not be applied on <input type="text" disabled>. Same issue on <textarea> too.
Attachments
test case
(381 bytes, text/html)
2013-07-01 05:15 PDT
,
Makoto Kato
no flags
Details
Patch
(6.20 KB, patch)
2013-09-24 05:54 PDT
,
gur.trio
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Makoto Kato
Comment 1
2013-07-01 05:15:27 PDT
Created
attachment 205800
[details]
test case
gur.trio
Comment 2
2013-09-24 05:54:08 PDT
Created
attachment 212455
[details]
Patch
gur.trio
Comment 3
2013-09-24 07:23:32 PDT
(In reply to
comment #2
)
> Created an attachment (id=212455) [details] > Patch
Hi Darin. Can you please review this?
gur.trio
Comment 4
2013-09-24 07:23:51 PDT
(In reply to
comment #2
)
> Created an attachment (id=212455) [details] > Patch
Hi Darin. Can you please review this?
WebKit Commit Bot
Comment 5
2013-09-25 05:20:31 PDT
Comment on
attachment 212455
[details]
Patch Clearing flags on attachment: 212455 Committed
r156387
: <
http://trac.webkit.org/changeset/156387
>
WebKit Commit Bot
Comment 6
2013-09-25 05:20:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug